# wlctl

./: CHANGELOG.md  Cargo.toml  Readme.md  flake.nix  package.nix  renovate.json
.github/aur/: PKGBUILD
.github/workflows/: ci.yaml  nix.yaml  release.yaml
src/: adapter.rs  agent.rs  app.rs  cli.rs  config.rs  device.rs  event.rs  handler.rs  lib.rs  main.rs  portal.rs  rfkill.rs  tui.rs  ui.rs
src/doctor/: check.rs  context.rs  mod.rs  render.rs  report.rs
src/doctor/checks/: association.rs  device_state.rs  dns.rs  driver.rs  gateway.rs  internet.rs  ip.rs  mod.rs  portal.rs  rfkill.rs
src/mode/: ap.rs  station.rs
src/mode/station/: auth.rs  known_network.rs  network.rs  share.rs  speed_test.rs
src/mode/station/auth/: entreprise.rs  hidden.rs
src/mode/station/auth/entreprise/: peap.rs  tls.rs  ttls.rs
src/nm/: mod.rs  types.rs  wifi.rs
src/portal/: browser.rs  mod.rs
src/vpn/: mod.rs  render.rs  wg.rs
