[package]
name = "wlctl"
version = "0.1.4"
authors = ["Aashish Thapa"]
license = "GPL-3.0"
edition = "2024"
description = "TUI for managing WiFi using NetworkManager"
readme = "Readme.md"
homepage = "https://github.com/aashish-thapa/wlctl"
repository = "https://github.com/aashish-thapa/wlctl"
keywords = ["wifi", "networkmanager", "tui", "linux", "wireless"]
categories = ["command-line-utilities"]

[dependencies]
async-channel = "2"
crossterm = { version = "0.29", default-features = false, features = [
    "event-stream",
] }
ratatui = "0.29"
tui-input = { version = "0.14", features = [
    "crossterm",
], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.9" }
clap = { version = "4", features = ["derive", "cargo"] }
anyhow = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27"
libc = "0.2"
hex = "0.4.3"
tui-qrcode = "0.1.3"
qrcode = "0.14.1"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
